Remove unneeded `--add-opens=java.base/java.util=ALL-UNNAMED`
Closes #1886